# redo

./: .gitignore  Cargo.toml  ChangeLog.md  Main.hs  NOTES  NOTES_more_state  README.md  eredo.cabal  mk_redo_links.sh  redo.cabal  test.sh
Distribution/Redo/: Concepts.hs  Hash.hs  Monad.hs  Util.hs
app/: Algorithm.hs  Always.hs  Clean.hs  IfChange.hs  Init.hs  Main.hs
doc/: Redo.mm  internal_architecture.md
some_repo/: .gitignore  default.o.do  main  main.do
some_repo/.redo/: interpreter-args.conf
src/: Always.hs  IfChange.hs  Init.hs  main.rs
src/Distribution/: Redo.hs
src/Distribution/Redo/: Basic.hs  Core.hs  Env.hs  Error.hs  Filepaths.hs  Hash.hs  Launch.hs  Log.hs  Monad.hs  Sandbox.hs  State.hs  UpToDateCheck.hs  Util.hs
src/Distribution/Redo/Log/: Sqlite.hs
test/: ProjectFinding.hs  TestUtil.hs  test.hs
test/.redo/: redo.conf
test/diamond/: .gitignore  in  mid.do  out.do
test/echo/: in
test/mid/: .gitignore  out.do
test/project-finding/: project-alt-path  subdir-alt-path
test/script/: all.do  bar.do  default.baz.do
