name:                eredo
version:             0.0.0
stability:           experimental
synopsis:            Simplicity in a build tool leads to reliable, understandable builds.
description:
    Engineered Redo (eredo) is a build tool based on djb's redo sketch.
    TODO: add more description
license:             GPL-3
license-file:        LICENSE
author:              Okuno Zankoku
maintainer:          zankoku.okuno@gmail.com
-- copyright:           
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    Distribution.Redo.Core
  other-modules:
    Distribution.Redo.Basic,
    Distribution.Redo.Error,
    Distribution.Redo.State
  build-depends:
    base >=4.8 && <5,
    base16-bytestring ==0.1.1.*,
    bytestring ==0.10.*,
    ConfigFile ==1.*,
    cryptohash-sha1 ==0.11.*,
    directory ==1.*,
    filepath ==1.*,
    Glob,
    mtl ==2.*,
    process >=1.2.1 && <2,
    sqlite-simple ==0.4.*,
    temporary ==1.*,
    time ==1.*,
    transformers ==0.5.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    FlexibleContexts,
    LambdaCase,
    OverloadedStrings,
    RecordWildCards,
    ScopedTypeVariables,
    ViewPatterns
  other-extensions: DeriveDataTypeable

executable redo-init
  main-is: Init.hs
  build-depends: eredo, base, base16-bytestring, bytestring, ConfigFile, cryptohash-sha1, directory, filepath, Glob, mtl, process, sqlite-simple, temporary, time, transformers
  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions: FlexibleContexts, LambdaCase, OverloadedStrings, RecordWildCards, ScopedTypeVariables, ViewPatterns
  other-extensions: DeriveDataTypeable

executable redo-always
  main-is: Always.hs
  build-depends: eredo, base, base16-bytestring, bytestring, ConfigFile, cryptohash-sha1, directory, filepath, Glob, mtl, process, sqlite-simple, temporary, time, transformers
  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions: FlexibleContexts, LambdaCase, OverloadedStrings, RecordWildCards, ScopedTypeVariables, ViewPatterns
  other-extensions: DeriveDataTypeable
