name:                redo
version:             0.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Zankoku Okuno
maintainer:          zankoku.okuno@gmail.com
-- copyright:           
category:            Build
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs: src/
  exposed-modules:
    Distribution.Redo,
    Distribution.Redo.Hash,
    Distribution.Redo.Util
  other-modules:
    Distribution.Redo.Monad,
    Distribution.Redo.Env
  build-depends:
    base >=4.8 && <5,
    base16-bytestring ==0.1.*,
    bytestring ==0.10.*,
    cryptohash ==0.11.*,
    directory >=1.2 && <2,
    filepath >=1.3 && <2,
    mtl ==2.*,
    process ==1.*,
    sqlite-simple ==0.4.*,
    text ==1.*,
    utf8-string ==1.*
  default-language: Haskell2010
  default-extensions:
    LambdaCase,
    OverloadedStrings,
    RecordWildCards,
    ViewPatterns
  other-extensions:
    GeneralizedNewtypeDeriving,
    MultiParamTypeClasses

executable redo
  hs-source-dirs:      app/
  main-is:             Main.hs
  other-modules:
  build-depends:
    base,
    filepath,
    directory,
    process,
    redo
  default-language:    Haskell2010
  -- default-extensions:
  -- other-extensions:
