name:                redo
version:             0.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Zankoku Okuno
maintainer:          zankoku.okuno@gmail.com
-- copyright:           
category:            Build
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10


library
  hs-source-dirs: src/
  exposed-modules:
    Distribution.Redo,
    Distribution.Redo.Hash,
    Distribution.Redo.Util
  other-modules:
    Distribution.Redo.Monad,
    Distribution.Redo.Env
  build-depends:
    base >=4.8 && <5,
    base16-bytestring ==0.1.*,
    bytestring ==0.10.*,
    cryptohash ==0.11.*,
    directory >=1.2 && <2,
    filepath >=1.3 && <2,
    mtl ==2.*,
    process ==1.*,
    sqlite-simple ==0.4.*,
    text ==1.*,
    utf8-string ==1.*
  default-language: Haskell2010
  default-extensions:
    LambdaCase,
    OverloadedStrings,
    RecordWildCards,
    ViewPatterns
  other-extensions:
    GeneralizedNewtypeDeriving,
    MultiParamTypeClasses


executable redo
  hs-source-dirs: app/
  main-is: Always.hs
  other-modules: Algorithm
  build-depends:
    base,
    process,
    redo
  default-language: Haskell2010
  default-extensions: LambdaCase

executable redo-always
  hs-source-dirs: app/
  main-is: Always.hs
  other-modules: Algorithm
  build-depends:
    base,
    process,
    redo
  default-language: Haskell2010
  default-extensions: LambdaCase

executable redo-ifchange
  hs-source-dirs: app/
  main-is: IfChange.hs
  other-modules: Algorithm
  build-depends:
    base,
    process,
    redo
  default-language: Haskell2010
  default-extensions: LambdaCase

executable redo-init
  hs-source-dirs: app/
  main-is: Init.hs
  -- other-modules:
  build-depends:
    base,
    filepath,
    directory,
    redo
  default-language: Haskell2010

executable redo-clean
  hs-source-dirs: app/
  main-is: Clean.hs
  -- other-modules:
  build-depends:
    base,
    redo
  default-language: Haskell2010


test-suite test-redo
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: test.hs
  build-depends:
    base,
    redo,
    shelly >=1.6 && <2,
    text >=1.0 && <2
  default-language: Haskell2010
  default-extensions:
    ExtendedDefaultRules,
    OverloadedStrings


source-repository head
  type: git
  location: https://github.com/Zankoku-Okuno/redo.git